# towervm

./: .gitignore  CMakeLists.txt  Pipfile  README.md  TODO.md  errors.cpp  errors.h  generator_targets.toml  instructions.toml  machine.cpp  machine.h  memory.h  opcodes.h  parser.cpp  parser.h  registers.h
docs/: assembly_language.md  binary_format.md  devices.md
examples/: fibonacci  fibonacci.cpp  fibonacci.tvm  hello_world  hello_world.tvm
libraries/: standard.toml
scripts/: check-format.sh  format.sh  generate.sh
src/: assembler.h  device.cpp  device.h  errors.cpp  errors.h  instructions.h  machine.cpp  machine.h  memory.h  parser.cpp  parser.h  program.cpp  program.h  towervm.cpp  towervm_asm.cpp
src/devices/console/: console.toml  console_device.cpp  console_device.h  instructions.h
src/libraries/: console.h  standard.h
tests/: advance.cpp  asserts.h  execute.cpp  load_program.cpp  machine.cpp
tools/: README.md  assemble.py  context.py  generate.py  instruction.py  instructions.py  library.py  parse.py  word.py
tools/libraries/: standard.py
tools/towervm/: README.md  context.py  instruction.py  library.py  parse.py
tools/towervm/libraries/: console.py  standard.py
